little modifications in template

--- a/src/site/styles/scss/_hero.scss
+++ b/src/site/styles/scss/_hero.scss
@@ -23,8 +23,8 @@
   }
 
   .bottom-shape {
-    width: 70%;
-    // height: 10%;
+    width: 50%;
+    height: 20%;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -131,7 +131,7 @@
       }
     }
 
-    .header-h1 {
+    h1 {
       margin-bottom: 20px;
 
       span {
@@ -359,7 +359,7 @@
       display: inline-block;
     }
 
-    .header-h1 {
+    h1 {
       margin-bottom: 20px;
 
       span {
@@ -634,7 +634,7 @@
       }
     }
 
-    .header-h1 {
+    h1 {
       margin-bottom: 20px;
 
       span {
@@ -768,7 +768,7 @@
       display: inline-block;
     }
 
-    .header-h1 {
+    h1 {
       margin-bottom: 20px;
 
       span {
