--- a/src/site/styles/scss/_header.scss
+++ b/src/site/styles/scss/_header.scss
@@ -968,7 +968,7 @@
       padding: 60px 0;
     }
 
-    .header-h1 {
+    h1 {
       color: $white;
       font-size: 60px;
       position: relative;
