--- a/src/site/styles/scss/_typography.scss
+++ b/src/site/styles/scss/_typography.scss
@@ -45,7 +45,7 @@ input {
   color: $white;
 }
 
-.header-h1,
+h1,
 h2,
 h3,
 h4,
@@ -59,7 +59,7 @@ h6 {
   @include transition;
 }
 
-.header-h1 {
+h1 {
   font-size: 70px;
   font-weight: 700;
   line-height: 112%;
