--- a/src/site/styles/scss/_buttons.scss
+++ b/src/site/styles/scss/_buttons.scss
@@ -1,64 +1,192 @@
 //>>>>> Component Button Here <<<<<//
 .theme-btn {
-    display: inline-block;
-    vertical-align: middle;
-    border: none;
-    outline: none !important;
-    background-color: $theme-color;
+  display: inline-block;
+  vertical-align: middle;
+  border: none;
+  outline: none !important;
+  background-color: $theme-color;
+  color: $white;
+  font-size: 16px;
+  font-weight: 700;
+  padding: 22px 40px;
+  @include transition;
+  letter-spacing: 0;
+  border-radius: 22px;
+  position: relative;
+  overflow: hidden;
+  text-align: center;
+  line-height: 1;
+  z-index: 9;
+  text-transform: capitalize;
+
+  i {
+    margin-left: 10px;
+  }
+
+  &::before,
+  &::after {
+    position: absolute;
+    top: 50%;
+    content: "";
+    width: 20px;
+    height: 20px;
+    background-color: $header-color;
+    border-radius: 50%;
+    z-index: -1;
+  }
+
+  &::before {
+    left: -20px;
+    transform: translate(-50%, -50%);
+  }
+
+  &::after {
+    right: -20px;
+    transform: translate(50%, -50%);
+  }
+
+  &:hover {
     color: $white;
-    font-size: 16px;
-    font-weight: 700;
-    padding: 22px 40px;
-    @include transition;
-    letter-spacing: 0;
-    border-radius: 22px;
-    position: relative;
-    overflow: hidden;
-    text-align: center;
-    line-height: 1;
-    z-index: 9;
-    text-transform: capitalize;
-
-    i {
-        margin-left: 10px;
-    }
-
-    &::before,&::after {
-        position: absolute;
-        top: 50%;
-        content: "";
-        width: 20px;
-        height: 20px;
-        background-color: $header-color;
-        border-radius: 50%;
-        z-index: -1;
-    }
 
     &::before {
-        left: -20px;
-        transform: translate(-50%, -50%);
+      animation: criss-cross-left 0.8s both;
+      animation-direction: alternate;
     }
 
     &::after {
-        right: -20px;
-        transform: translate(50%, -50%);
+      animation: criss-cross-right 0.8s both;
+      animation-direction: alternate;
     }
+  }
+
+  &.bg-white {
+    background-color: $white;
+    color: $header-color;
 
     &:hover {
-        color: $white;
+      color: $white;
+    }
+  }
 
-        &::before {
-            animation: criss-cross-left 0.8s both;
-            animation-direction: alternate;
-        }
-    
-        &::after {
-            animation: criss-cross-right 0.8s both;
-              animation-direction: alternate;
-        }
+  &.transparent {
+    background-color: transparent;
+    border: 1px solid $theme-color-2;
+    color: $theme-color-2;
+    padding: 20px 40px;
+
+    &:hover {
+      color: $white;
     }
 
-    &.bg-white {
+    @include breakpoint(max-md) {
+      padding: 18px 32px;
+    }
+
+    @include breakpoint(max-sm) {
+      padding: 16px 30px;
+      font-size: 14px;
+    }
+  }
+
+  &.transparent-2 {
+    background-color: transparent;
+    border: 1px solid $theme-color;
+    color: $theme-color;
+    padding: 20px 40px;
+
+    &:hover {
+      color: $white;
+      border: 1px solid transparent;
+    }
+
+    @include breakpoint(max-md) {
+      padding: 18px 32px;
+    }
+
+    @include breakpoint(max-sm) {
+      padding: 16px 30px;
+      font-size: 14px;
+    }
+  }
+
+  @include breakpoint(max-md) {
+    padding: 20px 32px;
+  }
+
+  @include breakpoint(max-sm) {
+    padding: 18px 30px;
+    font-size: 14px;
+  }
+}
+
+.theme-btn-feb-4 {
+  display: inline-block;
+  vertical-align: middle;
+  border: none;
+  outline: none !important;
+  background-color: $black; /*$theme-color;*/
+  color: $white;
+  font-size: 16px;
+  font-weight: 700;
+  //padding: 22px 40px;
+  // above is the original
+  padding: 22px 20px;
+  //padding: 10px 40px;
+  @include transition;
+  letter-spacing: 0;
+  border-radius: 22px;
+  position: relative;
+  overflow: hidden;
+  text-align: center;
+  line-height: 1;
+  z-index: 9;
+  text-transform: capitalize;
+
+  i {
+    margin-left: 10px;
+  }
+
+  &::before,
+  &::after {
+    position: absolute;
+    top: 50%;
+    content: "";
+    width: 20px;
+    height: 20px;
+    background-color: $theme-color-2;
+    //background-color: $header-color;
+    border-radius: 50%;
+    z-index: -1;
+  }
+
+  &::before {
+    left: -20px;
+    transform: translate(-50%, -50%);
+  }
+
+  &::after {
+    right: -20px;
+    transform: translate(50%, -50%);
+  }
+
+  &:hover {
+    color: $white; /*$theme-color-2;*/ /*$white;*/
+    background-color: $theme-color;
+    // without below 2 css styles the hover effect with two balls
+    // intersecting will not happen
+
+    &::before {
+      animation: criss-cross-left 0.8s both;
+      animation-direction: alternate;
+    }
+
+    &::after {
+      animation: criss-cross-right 0.8s both;
+      animation-direction: alternate;
+    }
+  }
+
+  /* &.bg-white {
         background-color: $white;
         color: $header-color;
 
@@ -80,7 +208,7 @@
         @include breakpoint (max-md){
             padding: 18px 32px;
         }
-    
+
         @include breakpoint (max-sm){
             padding: 16px 30px;
             font-size: 14px;
@@ -101,7 +229,7 @@
         @include breakpoint (max-md){
             padding: 18px 32px;
         }
-    
+
         @include breakpoint (max-sm){
             padding: 16px 30px;
             font-size: 14px;
@@ -116,24 +244,23 @@
     @include breakpoint (max-sm){
         padding: 18px 30px;
         font-size: 14px;
-    }
+    }*/
 }
 
 .theme-btn-2 {
-    font-size: 16px;
-    display: inline-block;
-    font-weight: 600;
-    color: $text-color;
-    text-transform: capitalize;
+  font-size: 16px;
+  display: inline-block;
+  font-weight: 600;
+  color: $text-color;
+  text-transform: capitalize;
 
-    i {
-        margin-left: 10px;
-    }
+  i {
+    margin-left: 10px;
+  }
 
-    &:hover {
-        color: $theme-color;
-    }
+  &:hover {
+    color: $theme-color;
+  }
 }
-
 
 //>>>>> Component Button End <<<<<//
