--- a/src/site/styles/scss/_section.scss
+++ b/src/site/styles/scss/_section.scss
@@ -66,4 +66,19 @@
   }
 }
 
+.section-padding-feb11-news-home-page {
+  //padding: 120px 0;
+  //original above
+  padding: 40px 30px;
+  /* top and bottom | left and right */
+
+  @include breakpoint(max-xl) {
+    padding: 100px 0;
+  }
+
+  @include breakpoint(max-lg) {
+    padding: 80px 0;
+  }
+}
+
 //>>>>> Basic Css End <<<<<//
