--- a/src/site/styles/scss/_buttons.scss
+++ b/src/site/styles/scss/_buttons.scss
@@ -391,5 +391,72 @@
     color: $theme-color;
   }
 }
+.read-more-btn-feb-4 {
+  display: inline-block;
+  vertical-align: middle;
+  border: none;
+  outline: none !important;
+  background-color: $theme-color-2;
+  //background-color:$black;
+  /*$theme-color;*/
+  color: $white;
+  font-size: 16px;
+  font-weight: 700;
+  //padding: 22px 40px;
+  padding: 10px 40px;
+  @include transition;
+  letter-spacing: 0;
+  border-radius: 22px;
+  position: relative;
+  overflow: hidden;
+  text-align: center;
+  line-height: 1;
+  z-index: 9;
+  text-transform: capitalize;
+
+  i {
+    margin-left: 10px;
+  }
+
+  &::before,
+  &::after {
+    position: absolute;
+    top: 50%;
+    content: "";
+    width: 20px;
+    height: 20px;
+    background-color: $theme-color-2;
+    //background-color: $header-color;
+    border-radius: 50%;
+    z-index: -1;
+  }
+
+  &::before {
+    left: -20px;
+    transform: translate(-50%, -50%);
+  }
+
+  &::after {
+    right: -20px;
+    transform: translate(50%, -50%);
+  }
+
+  &:hover {
+    color: $white; /*$theme-color-2;*/ /*$white;*/
+    background-color: $theme-color;
+    // without below 2 css styles the hover effect with two balls
+    // intersecting will not happen
+
+    &::before {
+      animation: criss-cross-left 0.8s both;
+      animation-direction: alternate;
+    }
+
+    &::after {
+      animation: criss-cross-right 0.8s both;
+      animation-direction: alternate;
+    }
+  }
+}
 
 //>>>>> Component Button End <<<<<//
