--- a/src/site/styles/scss/_contact.scss
+++ b/src/site/styles/scss/_contact.scss
@@ -7,6 +7,7 @@
     }
 
     input,
+    select,
     textarea {
       width: 100%;
       outline: none;
@@ -108,6 +109,7 @@
         }
 
         input,
+        select,
         textarea {
           &::placeholder {
             color: $white;
@@ -321,6 +323,7 @@
         }
 
         input,
+        select,
         textarea {
           border: 1px solid $border-color;
           color: $text-color;
