290325 all scss files image link changed

--- a/src/site/styles/scss/_cta.scss
+++ b/src/site/styles/scss/_cta.scss
@@ -405,7 +405,7 @@
   }
 
   .wave {
-    background: url("/img/video-top-shape.png");
+    background: url("https://talibiq.s3.eu-west-2.amazonaws.com/al-yaqeen/web/images/assets/img/video-top-shape.png");
     position: absolute;
     width: 200%;
     height: 100%;
@@ -516,7 +516,7 @@
   }
 
   .wave {
-    background: url("/img/cta-offer-shape.png");
+    background: url("https://talibiq.s3.eu-west-2.amazonaws.com/al-yaqeen/web/images/assets/img/cta-offer-shape.png");
     position: absolute;
     width: 200%;
     height: 100%;
