--- a/src/site/styles/scss/_hero.scss
+++ b/src/site/styles/scss/_hero.scss
@@ -119,7 +119,7 @@
         width: 20px;
         height: 20px;
         content: "";
-        background-image: url("../../assets/img/star.svg");
+        background-image: url("https://talibiq.s3.eu-west-2.amazonaws.com/al-yaqeen/web/images/assets/img/star.svg");
       }
     }
 
