--- a/src/site/styles/scss/_pricing.scss
+++ b/src/site/styles/scss/_pricing.scss
@@ -112,7 +112,7 @@
       height: 90px;
       background-repeat: no-repeat;
       background-size: cover;
-      background-image: url("../../assets/img/pricing/icon-bg.png");
+      background-image: url("https://talibiq.s3.eu-west-2.amazonaws.com/al-yaqeen/web/images/assets/img/pricing/icon-bg.png");
       z-index: -1;
       @include transition;
     }
