--- a/src/site/styles/scss/_news.scss
+++ b/src/site/styles/scss/_news.scss
@@ -383,7 +383,7 @@
     @include before;
     z-index: -1;
     height: 50%;
-    background-image: url("../../assets/img/cta/cta-bg.jpg");
+    background-image: url("https://talibiq.s3.eu-west-2.amazonaws.com/al-yaqeen/web/images/assets/img/cta/cta-bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 
