--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,11 @@
     width: 100%;
   }
 }
+
+.clamp-2-lines {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
