all image links fixed to import

--- a/src/site/styles/scss/_programs.scss
+++ b/src/site/styles/scss/_programs.scss
@@ -481,7 +481,7 @@
   }
 
   .wave {
-    background: url("https://talibiq.s3.eu-west-2.amazonaws.com/al-yaqeen/web/images/assets/img/clases-top-shape.png");
+    background: url("../../assets/img/clases-top-shape.png");
     position: absolute;
     width: 200%;
     height: 100%;
