--- a/src/site/styles/scss/_event.scss
+++ b/src/site/styles/scss/_event.scss
@@ -374,7 +374,7 @@
   }
 
   .wave {
-    background: url("https://talibiq.s3.eu-west-2.amazonaws.com/al-yaqeen/web/images/assets/img/event-top-shape.png");
+    background: url("../../assets/img/event-top-shape.png");
     position: absolute;
     width: 200%;
     height: 100%;
