admission page created and delete feature added

--- a/src/site/styles/scss/_variables.scss
+++ b/src/site/styles/scss/_variables.scss
@@ -4,6 +4,7 @@
   --white: #fff;
   --theme: #f39f5f;
   --theme2: #70a6b1;
+  --theme3: #101c42;
   --header: #385469;
   --text: #5c707e;
   --text-2: #ffffffcc;
