--- a/src/index.css
+++ b/src/index.css
@@ -503,6 +503,9 @@ button:focus {
 .merit-card-double {
   grid-column: span 2;
 }
+.merit-card-triple {
+  grid-column: span 3;
+}
 
 /* Card hover effects */
 .info-card:hover {
@@ -540,6 +543,9 @@ button:focus {
   .merit-card-double {
     grid-column: span 2;
   }
+  .merit-card-triple {
+    grid-column: span 3;
+  }
 }
 
 @media (max-width: 768px) {
@@ -548,6 +554,9 @@ button:focus {
   }
 
   .merit-card-double {
+    grid-column: span 1;
+  }
+  .merit-card-triple {
     grid-column: span 1;
   }
 }
