--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ button:focus {
 
 /* child section */
 .child-section-container {
-  min-height: 100vh;
+  min-height: 100%;
   padding: 20px;
   background: linear-gradient(
     135deg,
