three announcements pages added and cmn banner fixed

--- a/src/site/styles/scss/_header.scss
+++ b/src/site/styles/scss/_header.scss
@@ -948,7 +948,7 @@
 
   .page-heading {
     position: relative;
-    padding: 60px 0 197px;
+    padding: 60px 0;
     text-align: center;
     z-index: 9;
 
